--- a/hyperglass-ansible/roles/hyperglass/tasks/main.yml
+++ b/hyperglass-ansible/roles/hyperglass/tasks/main.yml
@@ -1,54 +1,85 @@
-- name: Install base packages
+- name: Install dnf plugins
   dnf:
-    name:
-      - python3
-      - python3-pip
-      - firewalld
-      - git
+    name: dnf-plugins-core
     state: present
 
-- name: Enable firewalld
+- name: Add Docker CE repository
+  command: >
+    dnf config-manager --add-repo
+    https://download.docker.com/linux/rhel/docker-ce.repo
+  args:
+    creates: /etc/yum.repos.d/docker-ce.repo
+
+- name: Install Docker Engine
+  dnf:
+    name:
+      - docker-ce
+      - docker-ce-cli
+      - containerd.io
+      - docker-buildx-plugin
+      - docker-compose-plugin
+    state: present
+
+- name: Enable and start Docker
   systemd:
-    name: firewalld
+    name: docker
     enabled: true
     state: started
 
-- name: Upgrade pip
-  pip:
-    name: pip
-    executable: pip3
-    state: latest
-
-- name: Install hyperglass
-  pip:
-    name: hyperglass
-    executable: pip3
-
-- name: Create hyperglass config dir
+- name: Ensure hyperglass config dir exists
   file:
-    path: /etc/hyperglass
+    path: "{{ hyperglass_config_dir }}"
     state: directory
+    mode: "0755"
 
-- name: Deploy config
-  template:
-    src: hyperglass.yaml.j2
-    dest: /etc/hyperglass/hyperglass.yaml
+- name: Clone hyperglass repository
+  git:
+    repo: https://github.com/thatmattlove/hyperglass.git
+    dest: "{{ hyperglass_install_dir }}"
+    version: main
+    depth: 1
 
-- name: Deploy systemd service
-  template:
-    src: hyperglass.service.j2
-    dest: /etc/systemd/system/hyperglass.service
+- name: Copy sample devices.yaml (quickstart)
+  copy:
+    src: "{{ hyperglass_install_dir }}/.samples/sample_devices.yaml"
+    dest: "{{ hyperglass_config_dir }}/devices.yaml"
+    remote_src: true
+    force: false
 
-- name: Open firewall port
-  firewalld:
-    port: 8001/tcp
-    permanent: true
-    state: enabled
-    immediate: true
+- name: Deploy hyperglass.env
+  copy:
+    dest: "{{ hyperglass_config_dir }}/hyperglass.env"
+    content: |
+      HYPERGLASS_APP_PATH={{ hyperglass_config_dir }}
+      HYPERGLASS_HOST={{ hyperglass_host }}
+      HYPERGLASS_PORT={{ hyperglass_port }}
+      HYPERGLASS_REDIS_HOST={{ hyperglass_redis_host }}
 
-- name: Enable hyperglass
-  systemd:
-    name: hyperglass
-    enabled: true
-    daemon_reload: true
-    state: started
+- name: Deploy docker-compose
+  copy:
+    dest: "{{ hyperglass_install_dir }}/compose.yaml"
+    content: |
+      services:
+        redis:
+          image: redis:alpine
+
+        hyperglass:
+          image: ghcr.io/thatmattlove/hyperglass:latest
+          depends_on:
+            - redis
+          env_file:
+            - {{ hyperglass_config_dir }}/hyperglass.env
+          ports:
+            - "{{ hyperglass_port }}:{{ hyperglass_port }}"
+          volumes:
+            - {{ hyperglass_config_dir }}:/etc/hyperglass
+
+- name: Pull images
+  command: docker compose pull
+  args:
+    chdir: "{{ hyperglass_install_dir }}"
+
+- name: Start hyperglass
+  command: docker compose up -d
+  args:
+    chdir: "{{ hyperglass_install_dir }}"
