--- a/prometheus/docker-compose.yml
+++ b/prometheus/docker-compose.yml
@@ -4,6 +4,9 @@ services:
   prometheus:
     image: prom/prometheus:latest
     container_name: prometheus
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+      - "--web.enable-lifecycle"
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - ./targets.yml:/etc/prometheus/targets.yml:ro
