--- a/hyperglass-ansible/inventory.ini
+++ b/hyperglass-ansible/inventory.ini
@@ -1,2 +1,6 @@
 [hyperglass_nodes]
-hg-server-01 ansible_host=192.168.15.238
+hg-server-01 ansible_host=192.168.15.234
+
+[hyperglass_nodes:vars]
+ansible_user=root
+ansible_python_interpreter=/usr/bin/python3
