--- a/hyperglass-ansible/roles/hyperglass/defaults/main.yml
+++ b/hyperglass-ansible/roles/hyperglass/defaults/main.yml
@@ -1,6 +1,3 @@
-hyperglass_install_dir: /opt/hyperglass
+hyperglass_dir: /opt/hyperglass
 hyperglass_config_dir: /etc/hyperglass
-
-hyperglass_port: 8001
-hyperglass_host: 0.0.0.0
-hyperglass_redis_host: redis
+hyperglass_repo: https://github.com/thatmattlove/hyperglass.git
